// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper clearButton"
>
  <button
    className="container uui-button-box uui-enabled -clickable root size-36 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="uui-caption"
    >
      CLOSE ALL NOTIFICATIONS
    </div>
  </button>
</div>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#notification-error-fill-24.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-blue root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#notification-help-fill-24.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 2`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#calendar-18.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-green root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#notification-check_circle-fill-24.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<div
  aria-live="polite"
  className="notificationWrapper color-amber root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#notification-warning-fill-24.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#cross.svg"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
